plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'GroomMVP'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // TODO [로컬 전용 · 커밋 금지]: 버전이 '<검증된 버전>' 플레이스홀더 그대로 커밋되어
    // 의존성 해석이 실패한다. S3 담당자가 실제 BOM 버전을 채우면 아래 두 줄을 되살릴 것.
//    implementation platform('software.amazon.awssdk:bom:<검증된 버전>')
//    implementation 'software.amazon.awssdk:s3'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // Redisson: 분산락 (파트 C)
    implementation 'org.redisson:redisson:4.6.1'
    // Spring Cache + Redis: 조회 캐싱/무효화 (파트 E)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly 'com.mysql:mysql-connector-j'
}

tasks.named('test') {
    // 성능 측정(@Tag("performance"))은 32스레드 × 수십 반복으로 DB 를 두드리는 계측이라
    // 회귀 테스트가 아니다. 일상 빌드를 느리게 만들지 않도록 기본 실행에서 제외하고,
    // 필요할 때만 -PincludePerformance 로 켠다.
    //   gradlew test -PincludePerformance --tests "*PartEPerformanceTest" -Dspring.profiles.active=mysql
    def includePerformance = project.hasProperty('includePerformance')
    useJUnitPlatform {
        if (!includePerformance) {
            excludeTags 'performance'
        }
    }

    def activeProfile = System.getProperty('spring.profiles.active')
    if (activeProfile != null) {
        systemProperty 'spring.profiles.active', activeProfile
    }
}
